app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s0pheap-demodeploy-svc
spec:
  selector:
    app: s0pheap-demodeploy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
